--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ python:
 install:
   - pip install -r requirements/prod.txt
   - pip install pep8 --use-mirrors
-  - pip install https://github.com/dcramer/pyflakes/tarball/master
+  - pip install pyflakes --use-mirrors
 before_script:
-  - "pep8 --exclude=migrations --ignore=E501,E225 src"
-  - pyflakes -x W src
+  - "pep8 --exclude=migrations --ignore=E501,E225 service_area_mozio"
+  - pyflakes service_area_mozio
 script:
   - python -m unittest discover -s service_area_mozio
